Ref update, 1.5 recompile

--- a/Source/StonebornDelights/StonebornDelights.csproj
+++ b/Source/StonebornDelights/StonebornDelights.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\1.4\Assemblies\</OutputPath>
+    <OutputPath>..\..\1.5\Assemblies\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.4.*</Version>
+      <Version>1.5.4069</Version>
     </PackageReference>
     <PackageReference Include="Krafs.Publicizer">
       <Version>2.*</Version>
